testsuite/poke.pkl/cast-any-to-function-diag-1.pk
/* { dg-do compile } */

type Func = ()void;
fun foo = (any a) void:
{
  a as Func; /* { dg-error "invalid cast" } */
};
